--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -41,20 +41,20 @@
             <span>Total (GB)</span>
             <strong>£{{total | floatformat:2}}</strong>
           </li>
-               <!-- card icons -->
-               <div class="text-center list-group-item ">
-                <i class="fa fa-cc-visa visa" ></i>
-                <i class="fa fa-cc-amex amex"></i>
-                <i class="fa fa-cc-mastercard mastercard"></i>
-                <i class="fa fa-cc-discover discover"></i>
-            </div>
+          <!-- card icons -->
+          <div class="text-center list-group-item ">
+            <i class="fa fa-cc-visa visa"></i>
+            <i class="fa fa-cc-amex amex"></i>
+            <i class="fa fa-cc-mastercard mastercard"></i>
+            <i class="fa fa-cc-discover discover"></i>
+          </div>
         </ul>
       </div>
 
       <!-- card pytments infomation -->
       <div class="col-md-8 order-md-1">
         <h4 class="mb-3">Contact info</h4>
-        <form  action=" " method="POST" id="payment-form">
+        <form action=" " method="POST" id="payment-form">
           {% csrf_token %}
           <div class="row">
             <div class="col-md-6 mb-3">
@@ -64,7 +64,8 @@
 
             <div class="col-md-6 mb-3">
               <label for="Phone_number">Phone number</label>
-              <input type="text" class="form-control" id="Phone_number" name ="Phone_number" placeholder="Phone number" required>
+              <input type="text" class="form-control" id="Phone_number" name="Phone_number" placeholder="Phone number"
+                required>
             </div>
           </div>
           <hr class="mb-4">
@@ -77,7 +78,8 @@
               <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
             </div>
           </div>
-          <button type="submit" class="btn user_button_sm my_hover btn-lg btn-block" id="submit-button" >Pay £{{total|floatformat:2}}</button>
+          <button type="submit" class="btn user_button_sm my_hover btn-lg btn-block" id="submit-button">Pay
+            £{{total|floatformat:2}}</button>
         </form>
       </div>
     </div>
@@ -85,7 +87,7 @@
 </section>
 {{ stripe_public_key|json_script:"id_stripe_public_key" }}
 {{ client_secret|json_script:"id_client_secret" }}
- <!-- stripe -->
+<!-- stripe -->
 <script src="https://js.stripe.com/v3/"></script>
 <script src="{% static 'js/stripe_elements.js' %}"></script>
 {% endblock content %}
