--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -63,7 +63,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                <i class="fa-solid fa-user"></i> Sort by
+                                <i class="fa-solid fa-filter"></i>Sort by
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url 'newest_result' %}"></i>Sort by newest</a>
