--- a/templates/administrator/administrator_base.html
+++ b/templates/administrator/administrator_base.html
@@ -24,9 +24,8 @@
     <link rel="canonical" href="https://myonlinerecipes.herokuapp.com/">
     <meta name="robots" content="index, follow">
     <title>Yara Beach </title>
-    <!-- Bootstrap 5.2-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- Bootstrap 5.0.2-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/392c1ed101.js" crossorigin="anonymous"></script>
     <!-- Favicon -->
@@ -35,8 +34,6 @@
     <link rel="icon" type="image/png" sizes="512x512" href="{% static 'images/favicon/android-chrome-512x512.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon/favicon-16x16.png' %}">
-    <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Qwitcher Grypen" rel="stylesheet">
     <!-- Local stylesheets -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" />
 </head>
