--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -26,11 +26,11 @@
 
     <!-- Typing effects -->
     <div>
-        <h2 class="heading"> Welcome to Dominican Republic ! </h2>
-        <h2 class="heading"> Yara Beach rooms and excursions! </h2>
-        <h2 class="heading"> Book a stay with free cancellation! </h2>
-        <h2 class="heading"> Special Rentals plus excursions ! </h2>
-        <h2 class="heading"> Book excursions and stays with us! </h2>
+        <h3 class="heading  w3-container w3-cursive"> Welcome to Dominican Republic ! </h3>
+        <h3 class="heading w3-container w3-cursive"> Yara Beach rooms and excursions! </h3>
+        <h3 class="heading w3-container w3-cursive"> Book a stay with free cancellation! </h3>
+        <h3 class="heading w3-container w3-cursive"> Special Rentals plus excursions ! </h3>
+        <h3 class="heading w3-container w3-cursive"> Book excursions and stays with us! </h3>
     </div>
 </section>
 
