--- a/templates/administrator/administrator_base.html
+++ b/templates/administrator/administrator_base.html
@@ -43,7 +43,7 @@
     </nav>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"></i><img src="{% static 'images/Yara-logo-white.png' %}"
+            <a class="navbar-brand" href="#"><img src="{% static 'images/Yara-logo-white.png' %}"
                     alt="Yara name with a palm tree"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -53,44 +53,44 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <div class="links-container">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'administrator' %}"> <i class="fa-solid fa-gauge-high"></i>
-                                Dashboard</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'admin-excursion' %}"> <i class="fa-solid fa-compass"></i>
-                                Excursions</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'admin-rental' %}"><i class="fa-solid fa-bed"></i>
-                                Rentals</a>
-                        </li>
-                        {% if not user.is_authenticated %}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                <i class="fa-solid fa-user"></i> My account
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{% url 'account_login' %}"><i
-                                            class="fa-solid fa-user"></i> Sign in</a></li>
-                            </ul>
-                        </li>
-                        {% else %}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                <i class="fa-solid fa-user"></i> Hi {{user|title}}
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{% url 'account_logout' %}"><i
-                                            class="fa-solid fa-user"></i> Logout</a></li>
-                            </ul>
-                        </li>
+                    <li class="links-container">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'administrator' %}"> <i class="fa-solid fa-gauge-high"></i>
+                            Dashboard</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'admin-excursion' %}"> <i class="fa-solid fa-compass"></i>
+                            Excursions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'admin-rental' %}"><i class="fa-solid fa-bed"></i>
+                            Rentals</a>
+                    </li>
+                    {% if not user.is_authenticated %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <i class="fa-solid fa-user"></i> My account
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'account_login' %}"><i
+                                        class="fa-solid fa-user"></i> Sign in</a></li>
+                        </ul>
+                    </li>
+                    {% else %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <i class="fa-solid fa-user"></i> Hi {{user|title}}
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'account_logout' %}"><i
+                                        class="fa-solid fa-user"></i> Logout</a></li>
+                        </ul>
+                    </li>
 
-                        {% endif %}
-                    </div>
+                    {% endif %}
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'home' %}"><i class="fa-solid fa-house-user"></i></i> Customer
                             Home Page</a>
