--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 {% load static %}
+
 <head>
     <!-- Metas -->
     <meta charset="utf-8">
@@ -30,153 +31,164 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
     <script src="https://kit.fontawesome.com/392c1ed101.js" crossorigin="anonymous"></script>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicon/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="192x192"
-        href="{% static 'images/favicon/android-chrome-192x192.png' %}">
-    <link rel="icon" type="image/png" sizes="512x512"
-        href="{% static 'images/favicon/android-chrome-512x512.png' %}">
+    <link rel="icon" type="image/png" sizes="192x192" href="{% static 'images/favicon/android-chrome-192x192.png' %}">
+    <link rel="icon" type="image/png" sizes="512x512" href="{% static 'images/favicon/android-chrome-512x512.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon/favicon-16x16.png' %}">
     <!-- Local stylesheets -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
 </head>
 
-    <body>
-        <!-- home navbar -->
-        <nav class="navbar navbar-expand-lg ">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"></i><img src="{% static 'images/Yara-logo.png' %}"
-                        alt="Yara name with a palm tree"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <div class="links-container">
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'excursions' %}"><i class="fa-solid fa-compass"></i>
-                                    Excursions</a>
+<body>
+    <!-- home navbar -->
+    <nav class="navbar navbar-expand-lg ">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="{% static 'images/Yara-logo.png' %}"
+                    alt="Yara name with a palm tree"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="links-container">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'excursions' %}"><i class="fa-solid fa-compass"></i>
+                            Excursions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'rentals' %}"> <i class="fa-solid fa-bed"></i>
+                            Rentals</a>
+                    </li>
+                    {% if not user.is_authenticated %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <i class="fa-solid fa-user"></i> My account
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'account_login' %}"><i
+                                        class="fa-solid fa-user"></i> Sign in</a></li>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'account_signup' %}"><i
+                                        class="fa-solid fa-user-plus"></i> Register </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'rentals' %}"> <i class="fa-solid fa-bed"></i>
-                                    Rentals</a>
-                            </li>
-                            {% if not user.is_authenticated %}
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    <i class="fa-solid fa-user"></i> My account
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="{% url 'account_login' %}"><i
-                                                class="fa-solid fa-user"></i> Sign in</a></li>
-                                    <li>
-                                        <a class="dropdown-item" href="{% url 'account_signup' %}"><i
-                                                class="fa-solid fa-user-plus"></i> Register </a>
-                                    </li>
 
-                                </ul>
+                        </ul>
+                    </li>
+                    {% else %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <i class="fa-solid fa-user"></i> Hi {{user|title}}
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="{% url 'account_logout' %}"><i class="fa-solid fa-user">
+                                    </i> Logout</a>
+                            </li>
+
+
+
+                            <li>
+                                <a class="dropdown-item" href="{% url 'account_change_password' %}">
+                                    <i class="fa-solid fa-user"></i> Change Password</a>
+                            </li>
+
+                            {% if request.user.is_superuser %}
+                            <li>
+                                <a class="dropdown-item" href="{% url 'administrator' %}"><i
+                                        class="fa-solid fa-toolbox"></i> Admin board</a>
                             </li>
                             {% else %}
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    <i class="fa-solid fa-user"></i> Hi {{user|title}}
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="{% url 'account_logout' %}"><i
-                                                class="fa-solid fa-user"></i> Logout</a></li>
-                                    <li><a class="dropdown-item" href="{% url 'account_change_password' %}"><i
-                                                class="fa-solid fa-user"></i> Change Password</a></li>
-                                    {% if request.user.is_superuser %}
-                                    <li><a class="dropdown-item" href="{% url 'administrator' %}"><i
-                                                class="fa-solid fa-toolbox"></i> Admin board</a></li>
-                                    {% else %}
-                                    <li><a class="dropdown-item" href="{% url 'excursion-bookings' %}">
-                                            <i class="fa-solid fa-book-circle-arrow-up"></i>
-                                            </i>Excursion Bookings</a></li>
-                                    <li><a class="dropdown-item" href="{% url 'rental-bookings' %}">
-                                            <i class="fa-solid fa-book-circle-arrow-up"></i>
-                                            </i>Rental Bookings</a></li>
-                                    {% endif %}
-                                </ul>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'excursion-bookings' %}">
+                                    <i class="fa-solid fa-book-circle-arrow-up"></i> Excursion Bookings</a>
                             </li>
 
-                            {% endif %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'contact' %}"><i class="fa-solid fa-envelope"></i></i>
-                                    Contact</a>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'rental-bookings' %}"> <i
+                                        class="fa-solid fa-book-circle-arrow-up"></i>
+                                    Rental Bookings</a>
                             </li>
-                        </div>
-                    </ul>
-                </div>
+                            {% endif %}
+                        </ul>
+                    </li>
+
+                    {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'contact' %}"><i class="fa-solid fa-envelope"></i>Contact</a>
+                    </li>
+                    </li>
+                </ul>
             </div>
-        </nav>
-        <!-- flash messages -->
-        <div class="message mt-3">
-            {% if messages %}
-            {% for message in messages %}
-            {% if message.tags == "success" %}
-            <div class="alert alert-success" role="alert">
-                {{message}}
-            </div>
-            {% else %}
-            <div class="alert alert-danger" role="alert">
-                {{message}}
-            </div>
-            {% endif%}
-            {% endfor %}
-            {% endif %}
+        </div>
+    </nav>
+    <!-- flash messages -->
+    <div class="message mt-3">
+        {% if messages %}
+        {% for message in messages %}
+        {% if message.tags == "success" %}
+        <div class="alert alert-success" role="alert">
+            {{message}}
+        </div>
+        {% else %}
+        <div class="alert alert-danger" role="alert">
+            {{message}}
+        </div>
+        {% endif%}
+        {% endfor %}
+        {% endif %}
+    </div>
+
+    <main>
+        {% block content %}
+        <!-- Main Content -->
+        {% endblock %}
+    </main>
+
+    <footer id="footer">
+
+        <!--Copyright-->
+        <div class="footer-copyright">
+            <p>&copy;
+                <script>document.write(new Date().getFullYear())</script> Yara beach
+            </p>
         </div>
 
-        <main>
-            {% block content %}
-            <!-- Main Content -->
-            {% endblock %}
-        </main>
+        </div>
 
-        <footer id="footer">
 
-            <!--Copyright-->
-            <div class="footer-copyright">
-                <p>&copy;
-                    <script>document.write(new Date().getFullYear())</script> Yara beach
-                </p>
+        <!--links Icon-->
+        <div class="social-media-links">
+            <div class="social_links">
+                <a aria-label="facebook" rel="noopener" href="https://www.facebook.com/" target="_blank"><i
+                        class="fa-brands fa-facebook"></i></a>
             </div>
-
+            <div class="social_links">
+                <a aria-label="instagram" rel="noopener" href="https://www.instagram.com/" target="_blank"><i
+                        class="fa-brands fa-instagram"></i></a>
             </div>
-
-
-            <!--links Icon-->
-            <div class="social-media-links">
-                <div class="social_links">
-                    <a aria-label="facebook" rel="noopener" href="https://www.facebook.com/" target="_blank"><i
-                            class="fa-brands fa-facebook"></i></a>
-                </div>
-                <div class="social_links">
-                    <a aria-label="instagram" rel="noopener" href="https://www.instagram.com/" target="_blank"><i
-                            class="fa-brands fa-instagram"></i></a>
-                </div>
-                <div class="social_links">
-                    <a aria-label="twitter" rel="noopener" target="_blank" href="https://twitter.com/"><i
-                            class="fa-brands fa-twitter"></i></a>
-                </div>
-                <div class="social_links">
-                    <a aria-label="tiktok" rel="noopener" target="_blank" href="https://www.tiktok.com/"><i
-                            class="fa-brands fa-tiktok"></i></a>
-                </div>
+            <div class="social_links">
+                <a aria-label="twitter" rel="noopener" target="_blank" href="https://twitter.com/"><i
+                        class="fa-brands fa-twitter"></i></a>
             </div>
+            <div class="social_links">
+                <a aria-label="tiktok" rel="noopener" target="_blank" href="https://www.tiktok.com/"><i
+                        class="fa-brands fa-tiktok"></i></a>
+            </div>
+        </div>
 
-        </footer>
+    </footer>
 
-        <!--Bootstrap 5.2 Javascript -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-            crossorigin="anonymous"></script>
-        <!-- Local Javascript -->
-        <script src="{% static 'js/slideShow.js' %}"></script>
+    <!--Bootstrap 5.2 Javascript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+    <!-- Local Javascript -->
+    <script src="{% static 'js/slideShow.js' %}"></script>
 
-    </body>
+</body>
 
 </html>
