Fixing error no li in element in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
                     {% else %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false"> <i class="fa-solid fa-user"></i> Hi {{user|title}}</a>
+                            aria-expanded="false"> Hi {{user|title}}</a>
 
                         <ul class="dropdown-menu">
                             <li>
