--- a/templates/base.html
+++ b/templates/base.html
@@ -44,8 +44,7 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
     <!-- home navbar -->
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="{% static 'images/Yara-logo.png' %}"
-                    alt="Yara name with a palm tree"></a>
+            <a class="navbar-brand" href="#"><span id="logo">Punta cana <span id="Explore">Explore</span><span id="initial">PCE</span></span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -151,7 +150,7 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
         <!--Copyright-->
         <div class="footer-copyright">
             <p>&copy;
-                <script>document.write(new Date().getFullYear())</script> Yara beach
+                <script>document.write(new Date().getFullYear())</script> Punta Cana Explore
             </p>
         </div>
 
