--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'excursions/excursions_base.html' %}
 {% load static %}
 
 {% block content %}
@@ -62,7 +62,7 @@
             </div>
 
             <div class="price">
-                £{{excursion.Price}}
+                ${{excursion.Price}}
             </div>
         </div>
 
@@ -102,7 +102,7 @@
             </div>
 
             <div class="price">
-                £{{rental.Price}}
+                ${{rental.Price}}
             </div>
         </div>
 
