--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends 'excursions/excursions_base.html' %}
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 {% load i18n %}
