--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -1,5 +1,4 @@
-{% extends "account/base.html" %}
-
+{% extends 'excursions/excursions_base.html' %}
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
