--- a/templates/rentals/rentals.html
+++ b/templates/rentals/rentals.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="price">
-                £{{rental.Price}}
+                ${{rental.Price}}
             </div>
         </div>
 
