Add collect static

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,11 +70,11 @@ font-size: 14px;
 }
 
 .nav-link:hover {
-    color: #f6b99f;
+    color:var(--orange-pantone-lighter);
 }
 
 .nav-link:focus {
-    color: #f6b99f;
+    color: var(--orange-pantone-lighter);
 }
 
 
