--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -23,7 +23,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="https://myonlinerecipes.herokuapp.com/">
     <meta name="robots" content="index, follow">
-    <title>Yara Beach </title>
+    <title>Punta cana Explore</title>
     <!-- Bootstrap 5.0.2-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -52,6 +52,10 @@
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="links-container">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'excursions' %}"><i class="fa-solid fa-house"></i>
+                                Home</a>
+                        </li>
                     <!-- Sort by -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -75,6 +79,7 @@
                     </li>
                     {% if not user.is_authenticated %}
                     <li class="nav-item dropdown">
+                        
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             <i class="fa-solid fa-user"></i> My account
