--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -6,6 +6,11 @@
 
     <h6 class="contact_word">CONTACT</h6>
 
+    <!-- Add a draggable element -->
+    <div class="whatsap-container">
+    <a aria-label="Whatsapp" rel="noopener" rel="whatsapp" href="https://api.whatsapp.com/send?phone=447541147634"
+        target="_blank"><img id="whatsapp-floating" class="text-center" src="{% static 'images/excursions/whatsapp.png'%}"> Whatsapp US</a>
+    </div>
     <div class="contact_form">
 
         <p>Looking forward to answering your email</p>
