--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -70,16 +70,18 @@
           </div>
           <hr class="mb-4">
           <h4 class="mb-3">Payment</h4>
-          <div class="row">
-            <div class="col-md-12 mb-3">
-              <!-- A Stripe card element will go here -->
-              <div class="mb-3" id="card-element"></div>
-              <!-- Used to display form errors -->
-              <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
-            </div>
-          </div>
-          <button type="submit" class="btn user_button_sm my_hover btn-lg btn-block" id="submit-button">Pay
-            £{{total|floatformat:2}}</button>
+          <!-- <div class="row"> -->
+          <!-- <div class="col-md-12 mb-3"> -->
+          <!-- A Stripe card element will go here -->
+          <!-- <div class="mb-3" id="card-element"></div> -->
+          <!-- Used to display form errors -->
+          <!-- <div class="mb-3 text-danger" id="card-errors" role="alert"></div> -->
+          <!-- </div> -->
+          <!-- </div> -->
+          <!-- <button type="submit" class="btn user_button_sm my_hover btn-lg btn-block" id="submit-button">Pay -->
+          <!-- Set up a container element for the button -->
+          <div id="paypal-button-container"></div>
+          <!-- </button> -->
         </form>
       </div>
     </div>
@@ -90,4 +92,99 @@
 <!-- stripe -->
 <script src="https://js.stripe.com/v3/"></script>
 <script src="{% static 'js/stripe_elements.js' %}"></script>
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <!-- Add meta tags for mobile and IE -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title> PayPal Checkout Integration | Server Demo </title>
+</head>
+<!-- Include the PayPal JavaScript SDK -->
+<script
+  src="https://www.paypal.com/sdk/js?client-id=Abb4FSOQb9_SgkRmke9yVfIOIDM6qWE1QPfxUC4qDJ4N47Kx3sho53q2MncaZp9yNu1qVSknFeRBno51&currency=USD"></script>
+
+<!-- create token -->
+<script>
+  function getCookie(name) {
+    var cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+      var cookies = document.cookie.split(';');
+      for (var i = 0; i < cookies.length; i++) {
+        var cookie = cookies[i].trim();
+        // Does this cookie string begin with the name we want?
+        if (cookie.substring(0, name.length + 1) === (name + '=')) {
+          cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+          break;
+        }
+      }
+    }
+    return cookieValue;
+  }
+  const csrftoken = getCookie('csrftoken');
+  const total = '{{total | floatformat:2}}'
+  const user = '{{user}}'
+  const home_url = "{% url 'checkout-success' %}"
+  
+  function makepayment() {
+    const full_name = document.getElementById('full_name').value;
+    const phone_number = document.getElementById('Phone_number').value;
+    const url = "{% url 'checkout' %}";
+    fetch(url, {
+      method: 'POST',
+      headers: {
+        'Content-type': 'application/json',
+        'X-CSRFToken': csrftoken,
+      },
+      body: JSON.stringify({ 'user': user, 'full_name':full_name, 'phone_number':phone_number})
+    })
+    console.log(user)
+      .then(response => {
+        if (!response.ok) {
+          throw new Error('Network response was not ok');
+        }
+        return response.json();
+      })
+      .then(data => {
+        // Handle the JSON data returned by the server here
+        console.log(data);
+      })
+      .catch(error => {
+        // Handle any error that occurred during the fetch request here
+        console.error('Error:', error);
+      });
+  }
+
+
+
+  // Render the PayPal button into #paypal-button-container
+  paypal.Buttons({
+
+    // Set up the transaction
+    createOrder: function (data, actions) {
+      return actions.order.create({
+        purchase_units: [{
+          amount: {
+            value: total
+          }
+        }]
+      });
+    },
+
+    // Finalize the transaction
+    onApprove: function (data, actions) {
+      return actions.order.capture().then(function (details) {
+        // Show a success message to the buyer
+        window.location.href = home_url;
+        makepayment()
+        // window.location.href = home_url;
+        // alert('Transaction completed by ' + details.payer.name.given_name + '!');
+      });
+    }
+
+  }).render('#paypal-button-container');
+</script>
+
 {% endblock content %}
