Add better checkout expericens and referee

--- a/templates/base.html
+++ b/templates/base.html
@@ -116,7 +116,7 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
 
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'contact' %}"><i class="fa-solid fa-envelope"></i> Contact</a>
+                        <a class="nav-link" href="{% url 'contact' %}"> Contact</a>
                     </li>
                 </ul>
             </div>
