--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -59,13 +59,19 @@
           <div class="row">
             <div class="col-md-6 mb-3">
               <label for="full_name">Full name *</label>
-              <input type="text" class="form-control" id="full_name" name="full_name" placeholder="Ellon Musk" required>
+              <input onchange="myFunction()" type="text" class="form-control" id="full_name" name="full_name"
+                placeholder="Full Name" required>
             </div>
 
             <div class="col-md-6 mb-3">
               <label for="Phone_number">Phone number</label>
-              <input type="text" class="form-control" id="Phone_number" name="Phone_number" placeholder="Phone number"
-                required>
+              <input onchange="myFunction()" type="text" class="form-control" id="Phone_number" name="Phone_number"
+                placeholder="Phone number" required>
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="reference">Reference Code (Optional)</label>
+              <input type="text" class="form-control" id="reference" name="reference"
+                placeholder="Reference code" required>
             </div>
           </div>
           <hr class="mb-4">
@@ -81,111 +87,126 @@
           <!-- <button type="submit" class="btn user_button_sm my_hover btn-lg btn-block" id="submit-button">Pay -->
           <!-- Set up a container element for the button -->
           <div id="paypal-button-container"></div>
+          <button id="continue" class="btn my_hover btn-outline-secondary">Continue</button>
+          <script>
+            let continues = document.getElementById('continue')
+            let paypalBtnId = document.getElementById('paypal-button-container')
+            paypalBtnId.style.display = "none"
+            // Initialize a counter variable to keep track of the function calls
+            let functionCallCount = 0;
+            const full_name = document.getElementById('full_name').value;
+            const phone_number = document.getElementById('Phone_number').value;
+            function myFunction(){
+             functionCallCount++
+             if(functionCallCount == 2){
+              continues.style.display = "none"
+              paypalBtnId.style.display = 'block'
+             }
+           }
+          </script>
           <!-- </button> -->
         </form>
       </div>
     </div>
   </div>
-</section>
-{{ stripe_public_key|json_script:"id_stripe_public_key" }}
-{{ client_secret|json_script:"id_client_secret" }}
-<!-- stripe -->
-<script src="https://js.stripe.com/v3/"></script>
-<script src="{% static 'js/stripe_elements.js' %}"></script>
+  {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+  {{ client_secret|json_script:"id_client_secret" }}
+  <!-- stripe -->
+  <script src="https://js.stripe.com/v3/"></script>
+  <script src="{% static 'js/stripe_elements.js' %}"></script>
 
-<!DOCTYPE html>
-<html lang="en">
+  <!DOCTYPE html>
+  <html lang="en">
 
-<head>
-  <!-- Add meta tags for mobile and IE -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title> PayPal Checkout Integration | Server Demo </title>
-</head>
-<!-- Include the PayPal JavaScript SDK -->
-<script
-  src="https://www.paypal.com/sdk/js?client-id=Abb4FSOQb9_SgkRmke9yVfIOIDM6qWE1QPfxUC4qDJ4N47Kx3sho53q2MncaZp9yNu1qVSknFeRBno51&currency=USD"></script>
+  <head>
+    <!-- Add meta tags for mobile and IE -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title> PayPal Checkout Integration | Server Demo </title>
+  </head>
+  <!-- Include the PayPal JavaScript SDK -->
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=Abb4FSOQb9_SgkRmke9yVfIOIDM6qWE1QPfxUC4qDJ4N47Kx3sho53q2MncaZp9yNu1qVSknFeRBno51&currency=USD"></script>
 
-<!-- create token -->
-<script>
-  function getCookie(name) {
-    var cookieValue = null;
-    if (document.cookie && document.cookie !== '') {
-      var cookies = document.cookie.split(';');
-      for (var i = 0; i < cookies.length; i++) {
-        var cookie = cookies[i].trim();
-        // Does this cookie string begin with the name we want?
-        if (cookie.substring(0, name.length + 1) === (name + '=')) {
-          cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-          break;
+  <!-- create token -->
+  <script>
+    function getCookie(name) {
+      var cookieValue = null;
+      if (document.cookie && document.cookie !== '') {
+        var cookies = document.cookie.split(';');
+        for (var i = 0; i < cookies.length; i++) {
+          var cookie = cookies[i].trim();
+          // Does this cookie string begin with the name we want?
+          if (cookie.substring(0, name.length + 1) === (name + '=')) {
+            cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+            break;
+          }
         }
       }
+      return cookieValue;
     }
-    return cookieValue;
-  }
-  const csrftoken = getCookie('csrftoken');
-  const total = '{{total | floatformat:2}}'
-  const user = '{{user}}'
-  const home_url = "{% url 'checkout-success' %}"
-  
-  function makepayment() {
-    const full_name = document.getElementById('full_name').value;
-    const phone_number = document.getElementById('Phone_number').value;
-    const url = "{% url 'checkout' %}";
-    fetch(url, {
-      method: 'POST',
-      headers: {
-        'Content-type': 'application/json',
-        'X-CSRFToken': csrftoken,
-      },
-      body: JSON.stringify({ 'user': user, 'full_name':full_name, 'phone_number':phone_number})
-    })
-    console.log(user)
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('Network response was not ok');
-        }
-        return response.json();
+    const csrftoken = getCookie('csrftoken');
+    const total = '{{total | floatformat:2}}'
+    const user = '{{user}}'
+    const home_url = "{% url 'checkout-success' %}"
+
+    function makepayment() {
+      const full_name = document.getElementById('full_name').value;
+      const phone_number = document.getElementById('Phone_number').value;
+      const reference = document.getElementById('reference').value
+      const url = "{% url 'checkout' %}";
+      fetch(url, {
+        method: 'POST',
+        headers: {
+          'Content-type': 'application/json',
+          'X-CSRFToken': csrftoken,
+        },
+        body: JSON.stringify({ 'user': user, 'full_name': full_name, 'phone_number': phone_number, 'reference':reference})
       })
-      .then(data => {
-        // Handle the JSON data returned by the server here
-        console.log(data);
-      })
-      .catch(error => {
-        // Handle any error that occurred during the fetch request here
-        console.error('Error:', error);
-      });
-  }
-
-
-
-  // Render the PayPal button into #paypal-button-container
-  paypal.Buttons({
-
-    // Set up the transaction
-    createOrder: function (data, actions) {
-      return actions.order.create({
-        purchase_units: [{
-          amount: {
-            value: total
+      console.log(user)
+        .then(response => {
+          if (!response.ok) {
+            throw new Error('Network response was not ok');
           }
-        }]
-      });
-    },
-
-    // Finalize the transaction
-    onApprove: function (data, actions) {
-      return actions.order.capture().then(function (details) {
-        // Show a success message to the buyer
-        window.location.href = home_url;
-        makepayment()
-        // window.location.href = home_url;
-        // alert('Transaction completed by ' + details.payer.name.given_name + '!');
-      });
+          return response.json();
+        })
+        .then(data => {
+          // Handle the JSON data returned by the server here
+          console.log(data);
+        })
+        .catch(error => {
+          // Handle any error that occurred during the fetch request here
+          console.error('Error:', error);
+        });
     }
 
-  }).render('#paypal-button-container');
-</script>
+    // Render the PayPal button into #paypal-button-container
+    paypal.Buttons({
+
+      // Set up the transaction
+      createOrder: function (data, actions) {
+        return actions.order.create({
+          purchase_units: [{
+            amount: {
+              value: total
+            }
+          }]
+        });
+      },
+
+      // Finalize the transaction
+      onApprove: function (data, actions) {
+        return actions.order.capture().then(function (details) {
+          // Show a success message to the buyer
+          window.location.href = home_url;
+          makepayment()
+          // window.location.href = home_url;
+          // alert('Transaction completed by ' + details.payer.name.given_name + '!'
+        });
+      }
+
+    }).render('#paypal-button-container');
+  </script>
 </section>
 
 {% endblock content %}
