Add max lenght html

--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -71,7 +71,7 @@
             <div class="col-md-6 mb-3">
               <label for="reference">Reference Code (Optional)</label>
               <input type="text" class="form-control" id="reference" name="reference"
-                placeholder="Reference code" required>
+                placeholder="Reference code" maxlength="6">
             </div>
           </div>
           <hr class="mb-4">
