--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -211,6 +211,9 @@
                 <a aria-label="tiktok" rel="noopener" target="_blank" href="https://www.tiktok.com/"><i
                         class="fa-brands fa-tiktok"></i></a>
             </div>
+            <div class="referecia" style="color:white">
+                <a aria-label="tiktok" rel="reference" target="_blank" href="{% url 'reference' %}">Referencia</a>
+            </div>
         </div>
 
     </footer>
