--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -25,8 +25,7 @@
     <meta name="robots" content="index, follow">
     <title>Punta cana Explore</title>
     <!-- Bootstrap 5.0.2-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/392c1ed101.js" crossorigin="anonymous"></script>
     <!-- Favicon -->
@@ -40,7 +39,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg ">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}"><span id="logo"><pan id="pc">Punta Cana</pan><img id="logo-img" src="{% static 'images/excursions/coconut-tree-copy.png' %}">  <span id="explore"> Explore</span><span id="initial"> PCE</span></span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
